--- a/postgres_mapper_derive/Cargo.toml
+++ b/postgres_mapper_derive/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-authors = ["Zeyla Hellyer <zey@zey.moe>"]
+authors = ["Zeyla Hellyer <hi@zeyla.me>"]
 description = "Postgres struct mapper proc-macro."
 documentation = "https://docs.rs/postgres-mapper"
 homepage = "https://github.com/zeyla/postgres-mapper"
