--- a/postgres_mapper_derive/Cargo.toml
+++ b/postgres_mapper_derive/Cargo.toml
@@ -13,9 +13,12 @@ version = "0.1.0"
 proc-macro = true
 
 [dependencies]
-syn = "~0.11"
-quote = "~0.3"
-postgres = "~0.15"
+quote = "0.6"
+syn = "0.15"
+
+[dependencies.postgres]
+git = "https://github.com/sfackler/rust-postgres"
+optional = true
 
 [features]
 default = []
