--- a/postgres_mapper_derive/Cargo.toml
+++ b/postgres_mapper_derive/Cargo.toml
@@ -17,8 +17,8 @@ quote = "0.3"
 syn = "0.11"
 
 [dependencies.postgres]
-git = "https://github.com/sfackler/rust-postgres"
 optional = true
+version = "0.15"
 
 [features]
 default = []
