--- a/postgres_mapper_derive/Cargo.toml
+++ b/postgres_mapper_derive/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 authors = ["Zeyla Hellyer <hi@zeyla.me>"]
 description = "Postgres struct mapper proc-macro."
-documentation = "https://docs.rs/postgres-mapper"
+documentation = "https://docs.rs/postgres-mapper-derive"
 homepage = "https://github.com/zeyla/postgres-mapper"
 keywords = ["postgres", "mapper"]
 license = "ISC"
@@ -15,10 +15,6 @@ proc-macro = true
 [dependencies]
 quote = "0.3"
 syn = "0.11"
-
-[dependencies.postgres]
-optional = true
-version = "0.15"
 
 [features]
 default = []
